# kube-client-rs

./: README.md
apimachinery/: Cargo.toml
apimachinery/src/watch/: mod.rs  streamwatcher.rs  watch.rs
client-rs/: Cargo.toml
client-rs/src/: lib.rs
client-rs/src/corev1/: clients.rs  mod.rs
client-rs/src/gentype/: client.rs  mod.rs
client-rs/src/rest/: client.rs  config.rs  mod.rs
examples/: Cargo.toml  main.rs  watch.rs
