[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[[example]]
name = "main"
path = "main.rs"

[[example]]
name = "watch"
path = "watch.rs"

[dev-dependencies]
client-rs = { path = "../client-rs" }
apimachinery = { path = "../apimachinery" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
